# gap

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  GITHUB_PUBLISH.md  LICENSE  README.md  RELEASE.md  pyproject.toml  structure.yaml
.archive/: README.md
.archive/initial-implementation/: README.md  example_usage.py  gap_cli.py  gap_fastapi_service.py  requirements.txt
.archive/initial-implementation/browser-extension/: extension_background_js.txt  extension_content_js.txt  extension_manifest_json.txt  extension_popup_html.txt  extension_popup_js.txt
.archive/initial-implementation/scripts/: script.py  script_1.py  script_2.py  script_3.py
.github/workflows/: ci.yml
.zed/: settings.json  tasks.json
cli/: __init__.py  gap_cli.py
docs/: README.md
docs/architecture/: API.md  PROTOCOL.md  README.md  STRUCTURE.md
docs/governance/: DECISIONS.md  README.md  RULES.md  universal-documentation-strategy.md
docs/guides/: README.md  SETUP.md  USAGE.md
docs/original/: GAP Protocol Implementation - Ready to Use Today.md  gap-implementation-prompt.md  gap-implementation-summary.md  gap-protocol-proposal.md
examples/: basic_usage.py
extensions/: README.md  build.sh
extensions/chrome/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  styles.css
extensions/chrome/icons/: generate_icons.sh  icon.html
scripts/: dev_setup.sh  install.sh  start_services.sh
services/: __init__.py  fastapi_service.py  mcp_server.py
src/gap/: __init__.py  entities.py  models.py  protocol.py  transformers.py
src/integrations/: __init__.py
